# testownik-win32

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: build-testownik.yml
include/: IatHook.h  button_modern.h  encoding.h  image_decoder.h  messages.h  performance_bar.h  random.h  screen_ending.h  screen_question.h  screen_welcome.h  status_bar.h  testownik.h  theme.h  utils.h  vec.h
src/: button_modern.c  encoding.c  image_decoder.c  main.c  performance_bar.c  random.c  screen_ending.c  screen_question.c  screen_welcome.c  status_bar.c  testownik.c  theme.c  vec.c
win32/: .gitignore  resource.h  testownik.manifest  testownik.rc
